[gd_scene load_steps=16 format=2]

[ext_resource path="res://Units/Unit.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Health/HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/DOT/PoisonDOT.tscn" type="PackedScene" id=3]
[ext_resource path="res://Units/Enemies/Enemy.gd" type="Script" id=4]
[ext_resource path="res://Effects/Shield/Shield.tscn" type="PackedScene" id=5]
[ext_resource path="res://Interactables/Coin/SilverCoin.tscn" type="PackedScene" id=6]
[ext_resource path="res://Interactables/Coin/GoldCoin.tscn" type="PackedScene" id=7]
[ext_resource path="res://Interactables/Coin/CopperCoin.tscn" type="PackedScene" id=8]
[ext_resource path="res://Classes/Hurtbox.gd" type="Script" id=9]
[ext_resource path="res://UI/Health/Health.tscn" type="PackedScene" id=10]
[ext_resource path="res://Art/UI/EnergyShieldUnder.png" type="Texture" id=11]
[ext_resource path="res://Art/UI/EnergyShieldProgress.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1 )

[sub_resource type="AnimationNodeStateMachine" id=2]

[sub_resource type="AnimationNodeStateMachinePlayback" id=3]

[node name="Enemy" groups=["Enemy"] instance=ExtResource( 1 )]
script = ExtResource( 4 )
health_type = 0
shield_unit = false
can_be_shielded = true
gold_dropped = 10
damage_to_lives = 1
primary_damage_reduction = 0.75
coin_drop_radius = 30.0
resistances = {
0: 100,
1: 100,
2: 100,
3: 100,
4: 100
}
Shield = ExtResource( 5 )
GoldCoin = ExtResource( 7 )
SilverCoin = ExtResource( 6 )
CopperCoin = ExtResource( 8 )

[node name="Health" parent="." index="0"]
max_hp_amount = 20

[node name="EnergyShieldHealth" parent="." index="1" instance=ExtResource( 10 )]

[node name="PoisonDOT" parent="." index="2" instance=ExtResource( 3 )]

[node name="UnitCollider" parent="." index="4"]
shape = SubResource( 1 )

[node name="Hurtbox" type="Area2D" parent="Flip/Sprite" index="0" groups=["EnemyHitbox"]]
unique_name_in_owner = true
script = ExtResource( 9 )
collision_masks = [ 256, 1 ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flip/Sprite/Hurtbox" index="0"]

[node name="AnimationTree" type="AnimationTree" parent="." index="6"]
tree_root = SubResource( 2 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 3 )

[node name="HealthBars" type="VBoxContainer" parent="." index="8"]
margin_right = 48.0
margin_bottom = 16.0
grow_vertical = 0
custom_constants/separation = 0

[node name="EnergyBar" parent="HealthBars" index="0" instance=ExtResource( 2 )]
unique_name_in_owner = true
visible = false
texture_under = ExtResource( 11 )
texture_progress = ExtResource( 12 )
energy_shield_bar_under = ExtResource( 11 )
energy_shield_bar_progress = ExtResource( 12 )

[node name="HealthBar" parent="HealthBars" index="1" instance=ExtResource( 2 )]
unique_name_in_owner = true

[node name="PositionTarget" type="Position2D" parent="." index="9"]

[connection signal="hp_changed" from="Health" to="HealthBars/HealthBar" method="set_value"]
[connection signal="max_hp_changed" from="Health" to="HealthBars/HealthBar" method="set_max"]
[connection signal="hp_changed" from="EnergyShieldHealth" to="HealthBars/EnergyBar" method="set_value"]
[connection signal="hp_depleted" from="EnergyShieldHealth" to="." method="_on_EnergyShieldHealth_hp_depleted"]
[connection signal="max_hp_changed" from="EnergyShieldHealth" to="HealthBars/EnergyBar" method="set_max"]
